--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
-
-
+    <div class="main-page">
+        <div class="container">
+            <button class="rock" value="rock">Rock</button>
+            <button class="paper" value="paper">Paper</button>
+            <button class="scissors" value="scissors">Scissors</button>
+            <button class="clear">Reset</button>
+            <div class="results"> </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
